# SimpleAlgorithms

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindUnitTest++.cmake
src/collections/: BinarySearchTree.cpp  BinarySearchTree.hpp  Dictionary.hpp  HashDictionary.cpp  HashDictionary.hpp  PriorityQueue.cpp  PriorityQueue.hpp
src/sort/: BubbleSort.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp  sort.hpp
test/collections/: BinarySearchTree.cpp  HashDictionary.cpp  PriorityQueue.cpp
test/sort/: BubbleSort.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp  SortFixtures.hpp
test/utils/: CheckMacros.hpp
